--- a/src/home.html
+++ b/src/home.html
@@ -15,7 +15,7 @@
     
     </main>
     <footer>
-        <p>&copy;  Your Name</p>
+        <p>&copy; Asad Razak</p>
     </footer>
 </body>
 </html>
